# similarity-checker

./: Cargo.toml  PRD.md  README.md  Similarity Logic.md  package.json  pnpm-lock.yaml  vite.config.ts
similarity-checker-gui/: package.json  pnpm-lock.yaml
similarity-checker-gui/src/: App.css  App.tsx
similarity-checker-gui/src-tauri/: Cargo.toml  tauri.conf.json
similarity-checker-gui/src-tauri/src/: lib.rs  main.rs
src/: App.css  App.tsx  cli.rs  grouper.rs  index.css  input.rs  main.rs  output.rs  similarity.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  file_info.rs  grouper.rs  input.rs  lib.rs  main.rs  output.rs  similarity.rs
src/components/ui/: badge.tsx  button.tsx  spinner.tsx
