[package]
name = "similarity-checker"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that groups files based on name similarity"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "similarity-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
strsim = "0.10"
anyhow = "1.0"
glob = "0.3"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3.8"